; ModuleID = '/home/carl/AnghaBench/libgit2/tests/diff/extr_tree.c_test_diff_tree__symlink_blob_mode_changed_to_regular_file_as_typechange.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/diff/extr_tree.c_test_diff_tree__symlink_blob_mode_changed_to_regular_file_as_typechange.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { i32*, i32 }

@GIT_DIFF_INCLUDE_TYPECHANGE = common dso_local global i32 0, align 4
@opts = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@.str = private unnamed_addr constant [7 x i8] c"7fccd7\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"a8595c\00", align 1
@expect = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@GIT_DELTA_DELETED = common dso_local global i64 0, align 8
@GIT_DELTA_MODIFIED = common dso_local global i64 0, align 8
@GIT_DELTA_ADDED = common dso_local global i64 0, align 8
@GIT_DELTA_TYPECHANGE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_diff_tree__symlink_blob_mode_changed_to_regular_file_as_typechange() #0 {
  %1 = load i32, i32* @GIT_DIFF_INCLUDE_TYPECHANGE, align 4
  store i32 %1, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @opts, i32 0, i32 0), align 4
  %2 = call i32 @process_tree_to_tree_diffing(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @expect, i32 0, i32 1), align 8
  %4 = call i32 @cl_assert_equal_i(i32 2, i32 %3)
  %5 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @expect, i32 0, i32 0), align 8
  %6 = load i64, i64* @GIT_DELTA_DELETED, align 8
  %7 = getelementptr inbounds i32, i32* %5, i64 %6
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @cl_assert_equal_i(i32 1, i32 %8)
  %10 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @expect, i32 0, i32 0), align 8
  %11 = load i64, i64* @GIT_DELTA_MODIFIED, align 8
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @cl_assert_equal_i(i32 0, i32 %13)
  %15 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @expect, i32 0, i32 0), align 8
  %16 = load i64, i64* @GIT_DELTA_ADDED, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @cl_assert_equal_i(i32 0, i32 %18)
  %20 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @expect, i32 0, i32 0), align 8
  %21 = load i64, i64* @GIT_DELTA_TYPECHANGE, align 8
  %22 = getelementptr inbounds i32, i32* %20, i64 %21
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @cl_assert_equal_i(i32 1, i32 %23)
  ret void
}

declare dso_local i32 @process_tree_to_tree_diffing(i8*, i8*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
